Fix the scrollbars in the tabular vis. view

--- a/src/visualisations/tabular/view/static/css/tabular.css
+++ b/src/visualisations/tabular/view/static/css/tabular.css
@@ -3,11 +3,22 @@
        This value will be updated by the tabular visualisation view. */
     --table-height: 60px;
 
-    /* width: 100%; */
+    width: calc(100% - 20px);
     margin: 10px;
     padding: 0;
     height: var(--table-height);
-    overflow: auto;
+    overflow: hidden;
+
+    /* Apparently, VS Code controls the color of the scrollbars INSIDE the webview
+       via some of the custom properties provided (on the HTML element).
+       In order to ensure the scrollbars of the table are visible,
+       some of these properties need to be redefined. */
+    --vscode-scrollbarSlider-background: #ccc;
+    --vscode-scrollbarSlider-hoverBackground: #aaa;
+    --vscode-scrollbarSlider-activeBackground: #999;
+
+    /* Make the small square at the intersection between the horiz. and vert. scrollbars invisible. */
+    --vscode-editor-background: #fff;
 }
 
 [data-visualisation-name="tabular"] .instructions {
